--- a/fig.yml
+++ b/fig.yml
@@ -1,5 +1,5 @@
 zookeeper:
-  image: jplock/zookeeper
+  image: jplock/zookeeper:3.4.6
   ports: 
     - "2181:2181"
 nimbus:
@@ -25,22 +25,24 @@ ui:
     - nimbus:nimbus
     - zookeeper:zk
 kafka1:
-  image: wurstmeister/kafka:0.8.1
+  image: wurstmeister/kafka:0.8.1.1-1
   ports:
     - "9092:9092"
   links:
     - zookeeper:zk
   environment:
     BROKER_ID: 1
-    HOST_IP: 192.168.59.103
+    HOST_IP: 192.168.1.180
     PORT: 9092
+    KAFKA_ADVERTISED_PORT: 9092
 kafka2:
-  image: wurstmeister/kafka:0.8.1
+  image: wurstmeister/kafka:0.8.1.1-1
   ports:
     - "9093:9093"
   links:
     - zookeeper:zk
   environment:
     BROKER_ID: 2
-    HOST_IP: 192.168.59.103
+    HOST_IP: 192.168.1.180
     PORT: 9093
+    KAFKA_ADVERTISED_PORT: 9093
